<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSyncApp</string>
    <string name="action_settings">Settings</string>
    <string name="o_hello_world">Hello world!</string>
    <string name="o_play">PLAY</string>
    <string name="o_master">Act as Master</string>
    <string name="o_slave">Act as Slave</string>
    <string name="o_pairedBT">Paired Devices</string>
    <string name="o_master_text">Now its working</string>
    <string name="o_m_enableBT">Enable Bluetooth</string>
    <string name="o_URL_m">Enter a Valid URL</string>
    <string name="o_download_m">Click to Download</string>
    <string name="o_update"> Updates will be shown here</string>
    <string name="o_slave_url">URL will be shown here after the connecting with Master</string>
    <string name="o_slave_updates">Updates will be shown here</string>
    <string name="o_sMsg">Send Message</string>
    <string name="os_click_reset">Reset</string>
    <string name="def_Image">Default Image</string>
    <string name="def_Video">Default Video</string>
    <string name="def_File">Default File</string>
<!--   <string name="help_m">HELP</string> -->

</resources>
