<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<!--  Add your Buttons from here on with prefix r_ for ritika, s_ sonam Happy Coding-->

    <TextView
        android:id="@+id/os_urlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/o_slave_url" />

    <ProgressBar
        android:id="@+id/os_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/os_urlTextView"
        android:layout_marginTop="57dp" />

    <TextView
        android:id="@+id/o_slave_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/os_progress"
        android:layout_marginTop="50dp"
        android:text="@string/o_slave_updates"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/os_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/os_click_reset" 
        android:onClick="reset"/>

</RelativeLayout>
